UserInyerface completed (before feedback)